overflow fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -168,6 +168,7 @@
         
         .fall {
             animation: fall 3s linear;
+            overflow: hidden;
         }
         
         @keyframes fall {
@@ -181,6 +182,7 @@
         
         .rise {
             animation: rise 3s linear;
+            overflow: hidden;
         }
         
         @keyframes rise {
@@ -194,6 +196,7 @@
         
         .move-left {
             animation: move-left 3s linear;
+            overflow: hidden;
         }
         
         @keyframes move-left {
@@ -207,6 +210,7 @@
         
         .move-right {
             animation: move-right 3s linear;
+            overflow: hidden;
         }
         
         @keyframes move-right {
@@ -220,6 +224,7 @@
         
         .appear {
             animation: appear 3s linear;
+            overflow: hidden;
         }
         
         @keyframes appear {
@@ -233,6 +238,7 @@
         
         .twist {
             animation: twist 3s linear;
+            overflow: hidden;
         }
         
         @keyframes twist {
@@ -243,6 +249,7 @@
         
         .roll {
             animation: roll 3s linear;
+            overflow: hidden;
         }
         
         @keyframes roll {
@@ -253,6 +260,7 @@
         
         .dangle {
             animation: dangle 3s linear;
+            overflow: hidden;
         }
         
         @keyframes dangle {
